# cs2-demo-analysis-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  INTEGRATION.md  LICENSE  README.md  README.zh-CN.md  THIRD-PARTY-NOTICES.md  callout-raw-data.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.changeset/: clean-dak-boundaries.md  config.json  extract-rivalhub-shared-stats.md
.claude/: launch.json
.claude/agents/: security-reviewer.md
.claude/skills/fixture-verify/: SKILL.md
.codex/: hooks.json
.codex/agents/: security-reviewer.toml
.github/workflows/: ci.yml  release.yml
apps/dak-studio/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/dak-studio/public/tris/: .gitignore
apps/dak-studio/src/: App.tsx  main.tsx  studio.css
apps/dak-studio/src/components/: CohortScope.tsx  Pagination.tsx  VetoInputDialog.tsx  primitives.tsx
apps/dak-studio/src/lib/: dem.ts  facts.test.ts  facts.ts  idb.ts  identity.test.ts  identity.ts  library.test.ts  library.ts  pin.ts  pkg-worker.ts  season.ts  series.test.ts  series.ts  tags.ts  tri.ts  update.ts
apps/demo-lab/: index.html  package.json  tsconfig.json  vite.config.ts
apps/demo-lab/src/: MapAnnotator.tsx  main.tsx
docs/: README.md  architecture.md  design-language.md  handoff-2026-06-04.md  integration-insight-agent.md  integration-rivalhub.md  integration.md  module-boundaries.md  module-capabilities.md  module-contract.md  publishing.md  release.md  rivalhub-extraction.md  rivalhub-migration.md  roadmap.md  rr-roadmap.md  stability-tiers.md  v3-migration.md  versioning.md
docs/archive/2026-06/: LOS-validation-report.md  cohort.md  duel-coach-lab.md  field-expression.md  handoff-2026-06-04.md  history-integration.md  integration-v0.4.md  module-capabilities.md  pro-baseline.md  roadmap-v0.4.md  v3-migration.md
docs/archive/plans/: 2026-06-01-season-cohort.md
docs/design/: cohort.md  duel-coach-lab.md  field-expression.md  map-control.md  match-workspace.md  prism.md  pro-baseline.md  rating-model.md  rr-model.md  rr-v1.md  rr-v2-lite.md  studio-redesign.md  visualization-findings.md
fixtures/baselines/: pro-spike-FINDINGS.md  rr-v2-pro-baseline-v0.json
fixtures/baselines/de_ancient/: blinds.json  bombs.json  clutches.json  damages.json  grenades.json  kills.json  manifest.json  match.json  player-economies.json  player-stats.json  players.json  rounds.json  shots.json
fixtures/input/: match_rr_zips.py  sample-package.json
fixtures/input/cohort/: README.md
python/: README.md  pyproject.toml
python/cs2_demo_analysis/: __init__.py  validate.py
python/packaging/: cs2-demo-exporter.spec  cs2dak-studio.spec  cs2dak.spec  icon.icns
python/scripts/: sanitize_export_zip.py
python/src/cs2_demo_exporter/: __init__.py  builder.py  cli.py  economy.py  enums.py  exporter.py  package.py  parse_worker.py  parser.py  rounds.py  stats.py  validate.py
python/src/cs2_demo_exporter/gui/: app.py
python/src/cs2_demo_exporter/gui/web/: app.js  index.html  style.css
python/src/cs2dak/: __init__.py  cli.py  enums.py  exporter.py  parse_worker.py  rounds.py  studio.py
python/src/cs2dak/gui/: __init__.py  app.py
python/src/cs2dak/gui/web/: app.js  index.html
python/tests/: test_economy_and_weapons.py  test_golden_de_ancient.py  test_non_roster_filter.py  test_round_index.py  test_smoke.py
scripts/: calibrate_value_accounts.py  package.sh  publish-npm.sh  sync-version.mjs
(+21 files in other folders)
