[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cs2dak"
version = "0.4.3"
description = "Parse CS2 .dem files into cs2-demo-format v2 ZIP exports"
readme = "README.md"
requires-python = ">=3.11"
# 与仓库根 LICENSE 一致。parse_worker/exporter 自 CS2-insight-agent 移植，
# 已获原作者授权按本仓库许可证分发（见 THIRD-PARTY-NOTICES.md）。
license = { text = "MIT" }
authors = [{ name = "Xinyu Du" }]
dependencies = [
    "cs2df>=3.0.0",  # v3 reference exporter (polars/numpy-based)
    "typer>=0.12",   # CLI (only gui/version remaining)
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
gui = ["pywebview>=5.0"]    # native window + HTML/JS frontend
build = ["pyinstaller>=6.0"] # bundle into a standalone .exe / .app

[project.scripts]
cs2dak = "cs2dak.cli:main"

[project.gui-scripts]
cs2dak-gui = "cs2dak.gui.app:main"
cs2dak-studio = "cs2dak.studio:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cs2dak"]
artifacts = ["src/cs2dak/gui/web/*", "src/cs2dak/studio_web/**"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
